website v1.0 // working layering between screens

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <source src="/assets/audio/booting_sfx.mp3">
     </audio>
     <div class="main_container">
-        <!-- <div class="booting_screen">
+        <div class="booting_screen">
             <section>
                 <p id="line_1_booting"></p>
                 <p id="line_2_booting"></p>
@@ -43,15 +43,15 @@
                 <label>C://SystemFiles/SaturnOS/User: </label>
                 <div id="prompt_gadget"></div>
             </form>
-        </div>  -->
+        </div>
 
-        <div class="main_screen">
+        <!-- <div class="main_screen">
             <div class="task_bar">
                 <div class="start_button">Start</div> <div class="separator_gadget"></div>
             </div>
         </div>
     </div>
 
-    <script src="/booting.js"></script>
+    <script src="./scripts/booting.js"></script>
 </body>
 </html>
