website v1.0 // initial commit

--- a/index.html
+++ b/index.html
@@ -45,13 +45,29 @@
             </form>
         </div>
 
-        <!-- <div class="main_screen">
+        <div class="main_screen">
             <div class="task_bar">
-                <div class="start_button">Start</div> <div class="separator_gadget"></div>
+                <div class="start_button"><img src="./assets/icons/computer_icon.png" class="task_bar_icon">System</div> 
+                <div class="separator_gadget"></div>
+                <div class="active_window"><img src="./assets/icons/browser_icon.png" class="task_bar_icon">WebSurfer</div>
+                <div class="unactive_window"><img src="./assets/icons/folder_icon.png" class="task_bar_icon">File Manager</div>
+                <div class="unactive_window"><img src="./assets/icons/control_panel_icon.png" class="task_bar_icon">Control Panel</div>
+                
+                <div class="task_bar_unopened">
+                    <img src="./assets/icons/audio_icon.png" class="task_bar_icon">
+                    <img src="./assets/icons/connection_icon.png" class="task_bar_icon">
+                    <img src="./assets/icons/document_folder_icon.png" class="task_bar_icon">
+                </div>
+                
+                <div class="clock">
+                    <p id="date">06/11/1995</p>
+                    <p id="hour"></p>
+                </div>
             </div>
         </div>
     </div>
 
     <script src="./scripts/booting.js"></script>
+    <script src="./scripts/taskbar_clock.js"></script>
 </body>
 </html>
