--- a/main_screen.html
+++ b/main_screen.html
@@ -5,12 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/global_styles.css">
     <link rel="stylesheet" href="./styles/main_screen_styles.css">
+    <link rel="stylesheet" href="./styles/system_menu_styles.css">
+    <link rel="stylesheet" href="./styles/task_bar_styles.css">
     <title>SaturnWare</title>
 </head>
 <body>
     <div class="viewport">
         <div class="stage">
             <div class="main_screen">
+
+                <div class="system_menu">
+                    
+                </div>
+
+
+
                 <div class="task_bar">
                     <div class="start_button"><img src="./assets/icons/computer_icon.png" class="task_bar_icon">System</div> 
                     <div class="separator_gadget"></div>
