website v1.0 // Add splash screen with functional progress bar

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/global_styles.css">
     <link rel="stylesheet" href="./styles/booting_styles.css">
-    <title>SaturnWare</title>
+    <title>Tecneco SA-94</title>
 </head>
 <body>
     <audio autoplay>
