--- a/main_screen.html
+++ b/main_screen.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles/main_screen_styles.css">
     <link rel="stylesheet" href="./styles/system_menu_styles.css">
     <link rel="stylesheet" href="./styles/task_bar_styles.css">
-    <title>SaturnWare</title>
+    <title>Tecneco SA-94</title>
 </head>
 <body>
     <div class="viewport">
